<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">开源中国</string>
    
    <string name="main_menu_version">版本：<xliff:g id="value">%s</xliff:g></string>
    <string name="main_menu_login">用户登录</string>
    <string name="main_menu_logout">注销登录</string>
    <string name="main_menu_myinfo">我的资料</string>
    <string name="main_menu_software">开源软件</string>
    <string name="main_menu_search">搜索</string>
    <string name="main_menu_picshow">显示图片</string>
    <string name="main_menu_picnoshow">隐藏图片</string>
    <string name="main_menu_cache">清除缓存</string>
    <string name="main_menu_email">意见反馈</string>
    <string name="main_menu_about">关于我们</string>
    <string name="main_menu_setting">系统设置</string>
    <string name="main_menu_exit">退出程序</string>
    
    <string name="frame_title_news_lastest">最新资讯</string>
    <string name="frame_title_news_blog">最新博客</string>
    <string name="frame_title_news_recommend">推荐阅读</string>
    <string name="frame_title_question_ask">问答</string>
    <string name="frame_title_question_share">分享</string>
    <string name="frame_title_question_other">综合</string>
    <string name="frame_title_question_job">职业</string>
    <string name="frame_title_question_site">站务</string>
    <string name="frame_title_tweet_lastest">最新动弹</string>
    <string name="frame_title_tweet_hot">热门动弹</string>
    <string name="frame_title_tweet_my">我的动弹</string>
    <string name="frame_title_tweet_send">动弹一下</string>
    <string name="frame_title_active_lastest">最新动态</string>
    <string name="frame_title_active_atme">我</string>
    <string name="frame_title_active_comment">评论</string>
    <string name="frame_title_active_myself">我自己</string>
    <string name="frame_title_active_message">留言</string>
    
    <string name="footbar_refresh">刷新</string>
    <string name="footbar_comment">评论</string>
    <string name="footbar_share">分享</string>
    <string name="footbar_favorite">收藏</string>
    <string name="footbar_more">更多</string>
    
    <string name="login_dialog_logo">开源中国</string>
    <string name="login_dialog_account">账号:</string>
    <string name="login_dialog_account_hint">输入账号/邮箱</string>
    <string name="login_dialog_password">密码:</string>
    <string name="login_dialog_password_hint">输入密码</string>
    <string name="login_dialog_reg">注册帐号</string>
    <string name="login_dialog_login">登  录</string>
    <string name="login_dialog_rememberPW">记住密码:</string>
    <string name="login_dialog_autoLogin">自动登录:</string>
    <string name="login_dialog_rememberMe">记住我的登录信息</string>
    
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
    <string name="pull_to_refresh_update">最近更新：</string>
    
    <string name="news_detail_head_title">新闻正文</string>
    <string name="news_detail_lable_pub">发布于</string>
    <string name="question_detail_head_title">帖子正文</string>
    <string name="question_pub_head_title">我要发帖</string>
    <string name="blog_detail_head_title">博客正文</string>
    <string name="software_detail_head_title">软件详情</string>
    <string name="tweet_detail_head_title">动弹详情</string>
    <string name="tweet_pub_head_title">动弹一下</string>
    <string name="message_detail_head_title">我和%s的对话</string>
    <string name="user_center_head_title">用户空间</string>
    
    <string name="user_friend_head_title">我的好友</string>
    <string name="user_friend_follower">关注(%d)</string>
    <string name="user_friend_fans">粉丝(%d)</string>
    
    <string name="comment_list_head_title">网友评论</string>
    <string name="comment_listitem_type">发布于</string>
    <string name="comment_pub_head_title">评论回复</string>
    <string name="comment_pub_content_hint">输入评论</string>
    <string name="comment_reply_title">---共有 %d 条评论---</string>
    
    <string name="img_from_camera">手机拍照</string>
    <string name="img_from_album">手机相册</string>
    <string name="ui_insert_image">插入图片</string>  
    
    <string name="setting_head_title">系统设置</string>

    <string name="check_new_version">检查新版本</string>
    <string name="app_platform">OSChina.NET for Android</string>
    <string name="copyleft">Copyright ©2008-2012 奥思网络版权所有</string>

</resources>
