<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:orientation="vertical" 
	android:background="@drawable/about_bg">
	    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="200dip"
        android:textSize="@dimen/text_size_16"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/app_platform"/>
    
    <TextView 
        android:id="@+id/about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="160dip"
        android:textColor="@color/black"
        android:text="@string/main_menu_version"/>
    
    <Button 
        android:id="@+id/about_update"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="110dip"
        android:background="@drawable/login_btn_selector" 
        android:text="@string/check_new_version"/>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="30dip"
        android:textColor="@color/black"
        android:text="@string/copyleft"/>
    
</FrameLayout>
